nivasa-macros/tests/trybuild/validation_custom_validate_string_arg.rs
use nivasa_macros::Dto;

#[derive(Dto)]
struct StringCustomValidator {
    #[custom_validate("validator")]
    email: String,
}

fn main() {}
